apps/radarr/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: radarr
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
        - image: linuxserver/radarr:5.18.3-nightly
          name: radarr
          resources: {}
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: "/config"
              name: radarr-vol
            - mountPath: "/downloads"
              name: downloads-vol
            - mountPath: "/media"
              name: media-vol
      volumes:
        - name: radarr-vol
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: media-vol
          persistentVolumeClaim:
            claimName: media-pvc
        - name: downloads-vol
          persistentVolumeClaim:
            claimName: downloads-pvc
status: {}
