apps/radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: radarr
  name: radarr-svc
  namespace: media
spec:
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
status:
  loadBalancer: {}
