apps/radarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: movies.bugaychuk.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: radarr-svc
                port:
                  number: 7878
    - host: movies.home.arpa
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: radarr-svc
                port:
                  number: 7878
